--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,14 @@
     <string name="connection_error">Connection error</string>
     <string name="json_error">Error retrieving data</string>
 
+    <string name="petunjuk">Selamat datang di <b>Hi Masjid</b>!
+        Hi Masjid adalah sebuah aplikasi mobile smartphone yang berfungsi sebagai mempermudah
+        pengguna untuk mencari masjid yang terdekat, mengetahui jadwal sholat, dan pengingat waktu sholat.
+        <br>ss
+        <td>df</td>
+        </br>
+
+    </string>
     <!-- Actions -->
     <string name="action_settings">Settings</string>
     <string name="action_refresh">Refresh</string>
@@ -14,42 +22,10 @@
     <string name="action_my_location">My location</string>
     <string name="action_search">Search</string>
 
-    <!-- Activities titles -->
-    <string name="title_activity_stations_list">Stations</string>
-    <string name="title_activity_station">Station</string>
-    <string name="title_activity_networks_list">Choose a network</string>
-    <string name="title_activity_map">Map</string>
-    <string name="title_activity_settings">Settings</string>
-
-    <!-- Welcome dialog -->
-    <string name="welcome_dialog_message">
-        Before you begin, please choose a bike network in the list.
-        \nAlso make sure you are connected to the Internet.
-    </string>
-    <string name="welcome_dialog_ok">OK</string>
-    <string name="welcome_dialog_cancel">Cancel</string>
-    <string name="welcome_dialog_title">Welcome</string>
-
-    <!-- Map -->
-    <string name="location_not_found">Location not found</string>
-    <string name="network_selected">selected</string>
-    <string name="bike_network_downloading">Please wait while bike network is being downloaded</string>
-
-    <!-- Widget -->
     <string name="widget_title_favorite_stations">Favorite stations</string>
     <string name="widget_no_fav_stations">No favorite stations</string>
-
-
-    <string name="intro_message">Welcome to <b>Scheduler</b>!
-        This sample demonstrates how you can schedule an alarm that causes a service to
-        be started. This is useful when you want to schedule alarms that initiate
-        long-running operations. Click START ALARM to activate an alarm to check
-        the Google home page for a custom doodle once a day. If the app finds a doodle,
-        it posts a \"Doodle Alert\" as a notification. Click CANCEL ALARM to cancel the
-        alarm. Once the alarm is active, it automatically restarts when the device is
-        rebooted.</string>
-    <string name="start_text">Start Alarm</string>
-    <string name="cancel_text">Cancel Alarm</string>
+    <string name="start_text">Reminder Sholat</string>
+    <string name="cancel_text">Cancel Reminder</string>
     <string name="doodle_alert">Doodle Alert</string>
     <string name="doodle_found">There is a Google doodle today!!</string>
     <string name="no_doodle">No Google doodle today.</string>
